# blog-backend

./: .env_template  .gitignore  README.md  pyproject.toml  tox.ini
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 2024-05-12_71a3c1c9d4f2_initial_migration.py  2024-05-19_b374399eac36_database_creation.py
src/auth/: services.py
src/auth/views/api/v1/: auth.py
src/blog/: models.py  schemas.py  services.py
src/blog/views/api/v1/: articles.py
src/core/: db.py
src/core/services/: databases.py
src/settings/: __init__.py  databases.py  jwt.py
src/users/: models.py  schemas.py  services.py
src/users/views/api/v1/: users.py
